--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ccxt==4.4.34
 quart==0.19.9
 pandas==2.2.3
-pandas_ta==0.4.19b0
+pandas_ta @ git+https://github.com/twopirllc/pandas-ta.git@development
 tortoise-orm==0.22.1
 numpy==2.1.3
