--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ pandas==2.2.3
 pandas_ta @ git+https://github.com/twopirllc/pandas-ta.git@development
 tortoise-orm==0.22.1
 numpy==1.26.4
+tenacity==9.0.0
