--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ccxt==4.4.43
-quart==0.19.9
+quart==0.20.0
+quart-cors==0.8.0
 pandas==2.2.3
 pandas_ta @ git+https://github.com/twopirllc/pandas-ta.git@development
 tortoise-orm==0.22.1
